# DL_AT3_Group1

./: pyproject.toml
dl_at3_group1/: Makefile  README.md
dl_at3_group1/notebooks/: Assignment_3_25229384.ipynb  Assignment_3_25428006.ipynb  Assignment_3_baseline.ipynb  Assignment_3_data_prep_v2.ipynb  Assignment_3_student_id3.ipynb  Assignment_3_student_id4.ipynb
