[project]
name = "dl-at3-group1"
version = "0.1.0"
description = ""
authors = [
    {name = "Mitali-UTS",email = "mitali.H.balki@stdent.uts.edu.au"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "requests (>=2.34.1,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "torch (==2.6.0)",
    "torchvision (==0.21.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "transformers (>=5.9.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false  
[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

